--- a/dnp3-linux-development-sdk/index.html
+++ b/dnp3-linux-development-sdk/index.html
@@ -15,7 +15,7 @@
 								   ">
    
 
-<meta name="image" content="https://freyrscada.github.io/dnp3-linux-development-sdk/dnpw320x220_linux_sdk.jpg"/>
+<meta name="image" content="https://freyrscada-embedded-solution.github.io/dnp3-linux-development-sdk/dnpw320x220_linux_sdk.jpg"/>
 
 
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -24,7 +24,7 @@
 <!-- Schema.org for Google -->
 <meta itemprop="name" content="DNP3 Linux Software Development Kit"/>
 <meta itemprop="description" content=" DNP3 Linux SDK includes simple (Server and Client  C programs )example  using a Command window and command line inputs. The source code will allow you to quickly compile your own examples with the features of your existing development environment to work with our DNP3 library."/>
-<meta itemprop="image" content="https://freyrscada.github.io/dnp3-linux-development-sdk/dnpw320x220_linux_sdk.jpg"/>
+<meta itemprop="image" content="https://freyrscada-embedded-solution.github.io/dnp3-linux-development-sdk/dnpw320x220_linux_sdk.jpg"/>
 
 <meta property="product:retailer_item_id" content="DNP3 Linux Software Development Kit" /> 
 <meta property="product:price:amount"     content="2000.00" /> 
@@ -32,7 +32,7 @@
 <meta property="product:availability"     content="in stock" /> 
 <meta property="product:condition"        content="new" /> 
   
-<link rel="canonical" href="https://freyrscada.github.io/dnp3-linux-development-sdk/" />
+<link rel="canonical" href="https://freyrscada-embedded-solution.github.io/dnp3-linux-development-sdk/" />
 
 <meta name="robots" content="index,follow" />
 <meta name="distribution" content="global" /><meta name="rating" content="general" />
@@ -50,7 +50,7 @@
         "name": "DNP3-Protocol"
       },
   "name": "DNP3 Protocol Library - Linux Software Development Kit(SDK) Stack",
-  "image": "https://freyrscada.github.io/dnp3-linux-development-sdk/dnpw320x220_linux_sdk.jpg",
+  "image": "https://freyrscada-embedded-solution.github.io/dnp3-linux-development-sdk/dnpw320x220_linux_sdk.jpg",
   "description": "Supports Embedded Linux (ARM, Coldfire, Power PC), Ubuntu Linux(X86, X86-64), Fedora, CentOS, Red Hat. DNP3 Linux SDK includes simple (Server and Client  C programs )example  using a Command window and command line inputs. The source code will allow you to quickly compile your own examples with the features of your existing development environment to work with our DNP3 library.",
  "aggregateRating": {
     "@type": "AggregateRating",
@@ -58,7 +58,7 @@
     "ratingCount": "96",
 	"reviewCount": "89"
   },
-  "url": "https://freyrscada.github.io/dnp3-linux-development-sdk/",
+  "url": "https://freyrscada-embedded-solution.github.io/dnp3-linux-development-sdk/",
   "sku": "DNP3-Protocol-Linux-SDK",
   "mpn": "DNP3-Protocol-Linux-SDK",
   "productID": "DNP3-Protocol-Linux-SDK",
@@ -68,7 +68,7 @@
     "price": "2500",
     "priceValidUntil": "2020-12-31",
     "itemCondition": "http://schema.org/NewCondition",
-	"url": "https://freyrscada.github.io/dnp3-linux-development-sdk/",
+	"url": "https://freyrscada-embedded-solution.github.io/dnp3-linux-development-sdk/",
     "availability": "http://schema.org/InStock",
     "seller": {
       "@type": "Organization",
