--- a/iec-60870-5-101/index.html
+++ b/iec-60870-5-101/index.html
@@ -11,15 +11,15 @@
     <meta name="robots" content="index,follow">
     <meta name="description" content="IEC 60870-5-101 Server and Master simulator, Source Code Library, Protocol Stack, Driver for Windows, Linux, PowerPC, QNX and more ">
     <meta name="keywords" content="101, IEC101, IEC 101, IEC-101, 870-5-101, IEC870-5-101, IEC-870-5-101, IEC 870-5-101, IEC60870-5-101, IEC-60870-5-101, IEC 60870-5-101, IEC60870, IEC 60870 ">
-    <meta name="image" content="https://freyrscada.github.io/iec-60870-5-101/101w320x220.jpg">
+    <meta name="image" content="https://freyrscada-embedded-solution.github.io/iec-60870-5-101/101w320x220.jpg">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="IEC 60870-5-101">
     <meta itemprop="description" content="IEC 60870-5-101 Server and Master simulator, Source Code Library, Protocol Stack, Driver for Windows, Linux, PowerPC, QNX and more ">
-    <meta itemprop="image" content="https://freyrscada.github.io/iec-60870-5-101/101w320x220.jpg">
+    <meta itemprop="image" content="https://freyrscada-embedded-solution.github.io/iec-60870-5-101/101w320x220.jpg">
 
-    <link rel="canonical" href="https://freyrscada.github.io/iec-60870-5-101/">
+    <link rel="canonical" href="https://freyrscada-embedded-solution.github.io/iec-60870-5-101/">
     <meta name="robots" content="index,follow">
     <meta name="distribution" content="global">
     <meta name="rating" content="general">
@@ -33,7 +33,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "description": "IEC 60870-5-101 Server and Master simulator, Source Code Library, Protocol Stack, Driver for Windows, Linux, PowerPC, QNX and more ",
-    "url": "https://freyrscada.github.io/iec-60870-5-101/",
+    "url": "https://freyrscada-embedded-solution.github.io/iec-60870-5-101/",
     "name": "IEC 60870-5-101"
 }
  </script>
@@ -48,7 +48,7 @@
         "name": "IEC-60870-5-101-Protocol"
          },
   "name": "IEC 60870-5-101",
-  "image": "https://freyrscada.github.io/iec-60870-5-101/101w320x220.jpg",
+  "image": "https://freyrscada-embedded-solution.github.io/iec-60870-5-101/101w320x220.jpg",
   "description": "IEC 60870-5-101 Server and Master simulator, Source Code Library, Protocol Stack, Driver for Windows, Linux, PowerPC, QNX and more ",
   "aggregateRating": {
     "@type": "AggregateRating",
@@ -56,7 +56,7 @@
     "ratingCount": "96",
 	"reviewCount": "89"
   },
-  "url": "https://freyrscada.github.io/iec-60870-5-101/",
+  "url": "https://freyrscada-embedded-solution.github.io/iec-60870-5-101/",
   "sku": "IEC-60870-5-101",
   "mpn": "IEC-60870-5-101",
   "productID": "IEC-101",
@@ -66,7 +66,7 @@
     "price": "5000",
     "priceValidUntil": "2020-12-31",
     "itemCondition": "http://schema.org/NewCondition",
-	"url": "https://freyrscada.github.io/iec-60870-5-101/",
+	"url": "https://freyrscada-embedded-solution.github.io/iec-60870-5-101/",
     "availability": "http://schema.org/InStock",
     "seller": {
       "@type": "Organization",
