--- a/iec-60870-5-104/index.html
+++ b/iec-60870-5-104/index.html
@@ -12,14 +12,14 @@
     <meta name="robots" content="index,follow">
     <meta name="description" content="IEC 60870-5-104 Server and Master simulator, Source Code Library, Protocol Stack, Driver for Windows, Linux, PowerPC, QNX and more ">
     <meta name="keywords" content="104, IEC104, IEC 104, IEC-104, 870-5-104, IEC870-5-104, IEC-870-5-104, IEC 870-5-104, IEC60870-5-104, IEC-60870-5-104, IEC 60870-5-104, IEC60870, IEC 60870 ">
-    <meta name="image" content="https://freyrscada.github.io/iec-60870-5-104/104w320x220.jpg">
+    <meta name="image" content="https://freyrscada-embedded-solution.github.io/iec-60870-5-104/104w320x220.jpg">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="IEC 60870-5-104">
     <meta itemprop="description" content="IEC 60870-5-104 Server and Master simulator, Source Code Library, Protocol Stack, Driver for Windows, Linux, PowerPC, QNX and more ">
-    <meta itemprop="image" content="https://freyrscada.github.io/iec-60870-5-104/104w320x220.jpg">
+    <meta itemprop="image" content="https://freyrscada-embedded-solution.github.io/iec-60870-5-104/104w320x220.jpg">
 
-    <link rel="canonical" href="https://freyrscada.github.io/iec-60870-5-104/">
+    <link rel="canonical" href="https://freyrscada-embedded-solution.github.io/iec-60870-5-104/">
     <meta name="robots" content="index,follow">
     <meta name="distribution" content="global">
     <meta name="rating" content="general">
@@ -32,7 +32,7 @@
     "@context": "https://schema.org",
     "@type": "WebPage",
     "description": "IEC 60870-5-104 Server and Master simulator, Source Code Library, Protocol Stack, Driver for Windows, Linux, PowerPC, QNX and more ",
-    "url": "https://freyrscada.github.io/iec-60870-5-104/",
+    "url": "https://freyrscada-embedded-solution.github.io/iec-60870-5-104/",
     "name": "IEC 60870-5-104"
 }
  </script>
@@ -47,7 +47,7 @@
         "name": "IEC-60870-5-104-Protocol"
          },
   "name": "IEC 60870-5-104",
-  "image": "https://freyrscada.github.io/iec-60870-5-104/104w320x220.jpg",
+  "image": "https://freyrscada-embedded-solution.github.io/iec-60870-5-104/104w320x220.jpg",
   "description": "IEC 60870-5-104 Server and Master simulator, Source Code Library, Protocol Stack, Driver for Windows, Linux, PowerPC, QNX and more ",
   "aggregateRating": {
     "@type": "AggregateRating",
@@ -55,7 +55,7 @@
     "ratingCount": "96",
 	"reviewCount": "89"
   },
-  "url": "https://freyrscada.github.io/iec-60870-5-104/",
+  "url": "https://freyrscada-embedded-solution.github.io/iec-60870-5-104/",
   "sku": "IEC-60870-5-104",
   "mpn": "IEC-60870-5-104",
   "productID": "IEC-104",
@@ -65,7 +65,7 @@
     "price": "5000",
     "priceValidUntil": "2020-12-31",
     "itemCondition": "http://schema.org/NewCondition",
-	"url": "https://freyrscada.github.io/iec-60870-5-104/",
+	"url": "https://freyrscada-embedded-solution.github.io/iec-60870-5-104/",
     "availability": "http://schema.org/InStock",
     "seller": {
       "@type": "Organization",
